hphp/hack/test/typecheck/__callStatic.php.exp
File "__callStatic.php", line 4, characters 3-14:
__callStatic methods are no longer supported (Parsing[1002])
